# moebius

./: .gitignore  README.md  spec-schema.yaml
src/moeb/: Cargo.toml
src/moeb/assets/: README.md  spec-schema.yaml
src/moeb/assets/roles/: run.role.md
src/moeb/assets/rubrics/: README.md  catalogue.rubrics.md  global.rubrics.md  run.rubrics.md
src/moeb/assets/skills/: run.skill.md  spec.skill.md  sub-agent.skill.md
src/moeb/internal/roles/: spec.role.md
src/moeb/internal/rubrics/: run.rubrics.md  spec.rubrics.md
src/moeb/internal/skills/: run.skill.md  spec.skill.md
src/moeb/src/: agent.rs  agent_inner.rs  agent_tests.rs  assets.rs  compaction.rs  config.rs  config_tests.rs  main.rs  run_state.rs  skills.rs  trace.rs  trace_tests.rs  version_tests.rs
src/moeb/src/adapters/: anthropic.rs  anthropic_request.rs  anthropic_response.rs  anthropic_tests.rs  cli.rs  embedded_assets.rs  gemini.rs  gemini_io.rs  gemini_tests.rs  mod.rs  ollama.rs  openai.rs  openai_io.rs  openai_tests.rs  retry.rs  retry_tests.rs
src/moeb/src/commands/: adapter_management.rs  adapter_management_tests.rs  adapters.rs  configure.rs  configure_tests.rs  init.rs  mod.rs  replay.rs  replay_adapter.rs  replay_executor.rs  replay_tests.rs  run.rs  spec.rs  use_cmd.rs  use_cmd_tests.rs
src/moeb/src/domain/: init.rs  mod.rs  run.rs  spec.rs  spec_integration_tests.rs  spec_parser.rs  spec_schema.rs  spec_tests.rs  use_adapter.rs
src/moeb/src/ports/: adapter_factory.rs  adapter_management.rs  ai.rs  assets.rs  init.rs  list_adapters.rs  mod.rs  run.rs  spec.rs  tool_executor.rs  (+1 more)
(+90 files in other folders)
