[package]
name = "moeb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moeb"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rpassword = "7"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
